Bug 294895 - using selection tool close opened groups in layer stack
Summary: using selection tool close opened groups in layer stack
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-27 00:13 UTC by animtim
Modified: 2012-02-29 10:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2012-02-27 00:13:24 UTC
Version:           svn trunk (using KDE 4.8.0) 
OS:                Linux

When you have a layer group, containing other layers, and this group is "opened" in the layer stack, using any selection tool shut the group in the layer docker.

Reproducible: Always

Steps to Reproduce:
-Create group layer. create 1 layer in it. go on this layer.
-use square selection tool

Actual Results:  
-when selection is created, the layer docker view is like "reset", the groups that were opened (content tree visible) are shut (content tree hidden)

Expected Results:  
The layer docker view shouldn't change

Bug for dmitryK
Comment 1 Dmitry Kazakov 2012-02-27 03:44:27 UTC
Surely my bug =)
Comment 2 Dmitry Kazakov 2012-02-27 08:19:20 UTC
Git commit 59bcfb82981f51428483e8f803c7c3c63590ec70 by Dmitry Kazakov.
Committed on 27/02/2012 at 09:37.
Pushed by dkazakov into branch 'master'.

Added support for checking the type of newly added dummy

We should not call QAbstractItemModel::beginInsertRows if this dummy
has a type which will not be shown in the layers tree. This feature
was planned, I simply forgot about it.

M  +1    -1    krita/ui/flake/kis_dummies_facade_base.cpp
M  +1    -1    krita/ui/flake/kis_dummies_facade_base.h
M  +14   -5    krita/ui/kis_model_index_converter.cpp
M  +4    -1    krita/ui/kis_model_index_converter.h
M  +7    -1    krita/ui/kis_model_index_converter_base.h
M  +7    -1    krita/ui/kis_model_index_converter_show_all.cpp
M  +3    -1    krita/ui/kis_model_index_converter_show_all.h
M  +8    -8    krita/ui/kis_node_model.cpp
M  +1    -1    krita/ui/kis_node_model.h
M  +111  -33   krita/ui/tests/kis_model_index_converter_test.cpp
M  +10   -3    krita/ui/tests/kis_model_index_converter_test.h

http://commits.kde.org/calligra/59bcfb82981f51428483e8f803c7c3c63590ec70
Comment 3 Dmitry Kazakov 2012-02-29 10:56:17 UTC
Git commit b95e8242abc05ed22d420b53a8d5f077d4a25a0f by Dmitry Kazakov.
Committed on 27/02/2012 at 09:37.
Pushed by dkazakov into branch 'tools-modifiers-fixes-kazakov'.

Added support for checking the type of newly added dummy

We should not call QAbstractItemModel::beginInsertRows if this dummy
has a type which will not be shown in the layers tree. This feature
was planned, I simply forgot about it.

M  +1    -1    krita/ui/flake/kis_dummies_facade_base.cpp
M  +1    -1    krita/ui/flake/kis_dummies_facade_base.h
M  +14   -5    krita/ui/kis_model_index_converter.cpp
M  +4    -1    krita/ui/kis_model_index_converter.h
M  +7    -1    krita/ui/kis_model_index_converter_base.h
M  +7    -1    krita/ui/kis_model_index_converter_show_all.cpp
M  +3    -1    krita/ui/kis_model_index_converter_show_all.h
M  +8    -8    krita/ui/kis_node_model.cpp
M  +1    -1    krita/ui/kis_node_model.h
M  +111  -33   krita/ui/tests/kis_model_index_converter_test.cpp
M  +10   -3    krita/ui/tests/kis_model_index_converter_test.h

http://commits.kde.org/calligra/b95e8242abc05ed22d420b53a8d5f077d4a25a0f