Added support for checking the type of newly added dummy

We should not call QAbstractItemModel::beginInsertRows if this dummy
has a type which will not be shown in the layers tree. This feature
was planned, I simply forgot about it.

BUG:294895