krita/ui/flake/kis_dummies_facade_base.h
@@ -64,7 +64,7 @@ signals:
      * The signals for controlling the node model
      */
 
-    void sigBeginInsertDummy(KisNodeDummy *parent, int index);
+    void sigBeginInsertDummy(KisNodeDummy *parent, int index, const QString &metaObjectType);
     void sigEndInsertDummy(KisNodeDummy *dummy);
 
     void sigBeginRemoveDummy(KisNodeDummy *dummy);
